--- a/sass/components/_foot-social-icons.scss
+++ b/sass/components/_foot-social-icons.scss
@@ -1,13 +1,31 @@
 
       .foot-social{
-        margin-left: 72px; 
-        padding-top: 12px;  
+        padding-top: 12px; 
+        @media screen and (max-width:767px) {
+          margin-left: 0;
+        }
+        @media screen and (min-width:768px) {
+          margin-left: 165px;
+        }
+        @media screen and (min-width:1200px) {
+          margin-left: 72px; 
+        }
+        
+         
       
       &__title{color: var(--second-text-colour); 
          margin: 0; 
          margin-bottom: 20px; 
          font-size: 14px;
-         line-height: 1.14;}
+         line-height: 1.14;
+         @media screen and (max-width:767px){margin-top: 48px;}
+        @media screen and (max-width:1199px) {
+          text-align: center;
+          
+        }
+        
+        @media screen and (min-width:1200px) { }
+        }
       
          
         &__list{
