--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,11 +3,15 @@
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
-    margin-bottom: 20px;
+   
     display: inline-block;
     color: var(--second-text-colour);
-    @media screen and (max-width:767px) {
-        padding-left: 39px;
+    @media screen and (max-width:1199px) {
+        margin-bottom: 28px;
+    }
+
+    @media screen and (min-width:1200px) {
+        margin-bottom: 20px;
     }
     }
 
@@ -17,12 +21,32 @@
     padding-bottom: 60px;
 
 &__list{
-    display: inline-block; 
     margin: 0; 
     padding: 0;
-    padding-left: 0;}  
+    @media screen and (max-width:1199px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+    @media screen and (min-width: 1200px) {
+
+        align-items: baseline;
+    // display: inline-block; 
+    //  padding-left: 0;
+    }
+    }  
   
-&__item:not(:last-child){margin-bottom: 9px;}
+&__item:not(:last-child){
+    
+    @media screen and (max-width:1199px) {margin-bottom: 12px;}
+    @media screen and (min-width:1200px) {
+        margin-bottom: 9px;
+    }
+    
+
+
+}
 
       
 &__logo{color: var(--button-text-colour);}
@@ -42,8 +66,9 @@
 
 
 .site-footer__contacts{
-    @media screen and (max-width:767px) {
-        padding-left: 109px;
-        
+    @media screen and (max-width:1199px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
