--- a/sass/components/_modal-button.scss
+++ b/sass/components/_modal-button.scss
@@ -22,8 +22,12 @@
         border:none;
         
         margin: 0;
-        margin-left: 125px;
+        
         margin-top: 30px;
-    
-    
+
+        margin-right: auto;
+        margin-left: auto;
+
+
+  
     }
