--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,8 +1,7 @@
 
 .modal{
     position: relative;
-    width: 528px;
-    height: 581px; 
+    
     top: 50%; 
     left: 50%;
      transform: translate(-50%,-50%);
@@ -10,15 +9,34 @@
     border-radius: 4px;
     padding: 40px;
     background-color: var(--second-text-colour); 
- 
+    @media screen and (max-width:1199px) {
+    width: 450px;
+    height: 609px;
+
+    }
+    @media screen and (min-width:1200px) {
+    width: 528px;
+    height: 581px; 
+    }
+    
+
 
  &__title{
     color: var(--main-text-colour); 
-    font-size: 20px;
-    line-height: 23px;
+    margin: 0;
     line-height: 0.05;
     text-align: center;
     margin-bottom: 12px;
+    @media screen and (max-width:1199px) {
+       
+        font-size: 20px;
+        line-height: 30px;
+    }
+    @media screen and (min-width:1200px) {
+    font-size: 20px;
+    line-height: 23px;
+    }
+    
 }
 }
 
@@ -73,7 +91,7 @@
 
 
     .modal__textarea{
-        width:  448px;;
+        
         height: 120px;
         border: 1px solid rgba(33, 33, 33, 0.2);
         color: rgba(117, 117, 117, 0.5);
@@ -82,8 +100,10 @@
         padding: 12px 16px;
         font-size: 12px;
         line-height: 1.16;
-        letter-spacing: 0.01em;                      
-       
+        letter-spacing: 0.01em; 
+        resize:none; 
+        @media screen and (max-width:1199px) {width:  370px;}
+        @media screen and (min-width:1200px) {width:  448px;}
         
 
         &:focus{
@@ -96,13 +116,31 @@
         }  
 }
 
-    
+.agree-text{
+    @media screen and (max-width:1199px) {
+        font-size: 12px;
+        line-height: 1.17;   
+    }
+    @media screen and (min-width:1200px) {
+    font-size: 14px;
+    line-height: 1.7;
+        }
+
+}
 
             .agree-link{text-decoration: underline;
                 color: rgba(33, 150, 243, 1);
+                
+                margin-left: 5px; 
+                @media screen and (max-width:1199px) {
+                    font-size: 12px;
+                    line-height: 1.17;   
+                }
+                @media screen and (min-width:1200px) {
                 font-size: 14px;
                 line-height: 1.7;
-                margin-left: 5px; 
+                    }
+                
                
                }
 
@@ -110,4 +148,4 @@
 
             .checkbox-agree{display: flex; justify-content: center; align-items: center;}
 
-           
+            
