--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -72,14 +72,14 @@
             background-position: center;
             background-size: cover;
             background-image: linear-gradient(to right, rgba(47,48,58,0.4),
-           rgba(47,48,58,0.4)),url(../img/hero/Img_tab@1x.jpg);  
+           rgba(47,48,58,0.4)),url(../img/hero/Img_desk@1x.jpg);  
          
 
          @media (min-device-pixel-ratio: 2),
          (min-resolution: 192dpi),
         (min-resolution: 2dppx){
             background-image: linear-gradient(to right, rgba(47,48,58,0.4),
-            rgba(47,48,58,0.4)),url(../img/hero/Img_tab@2x.jpg);
+            rgba(47,48,58,0.4)),url(../img/hero/Img_desk@2x.jpg);
         }
        
          
