--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -26,13 +26,13 @@
             background-size: cover;
 
             background-image: linear-gradient(to right, rgba(47,48,58,0.4),
-           rgba(47,48,58,0.4)),url(../img/hero/Img_mob@1x.jpg);  
+           rgba(47,48,58,0.4)),url(../img/hero/img_mob@1x.jpg);  
 
          @media (min-device-pixel-ratio: 2),
          (min-resolution: 192dpi),
         (min-resolution: 2dppx){
             background-image: linear-gradient(to right, rgba(47,48,58,0.4),
-            rgba(47,48,58,0.4)),url(../img/hero/Img_mob@2x.jpg);
+            rgba(47,48,58,0.4)),url(../img/hero/img_mob@2x.jpg);
         }
 
          }
@@ -48,14 +48,14 @@
             background-position: center;
             background-size: cover;
             background-image: linear-gradient(to right, rgba(47,48,58,0.4),
-           rgba(47,48,58,0.4)),url(../img/hero/Img_tab@1x.jpg);  
+           rgba(47,48,58,0.4)),url(../img/hero/img_tab@1x.jpg);  
          
 
          @media (min-device-pixel-ratio: 2),
          (min-resolution: 192dpi),
         (min-resolution: 2dppx){
             background-image: linear-gradient(to right, rgba(47,48,58,0.4),
-            rgba(47,48,58,0.4)),url(../img/hero/Img_tab@2x.jpg);
+            rgba(47,48,58,0.4)),url(../img/hero/img_tab@2x.jpg);
         }
 
          }
