--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -87,7 +87,7 @@ padding-bottom: 30px;}
             height: 460px;  
         }
 
-        @media screen and (max-width:1199px) {
+        @media screen and (min-width:768px) {
 
             width: 354px;
             height: 374px;
