--- a/sass/components/_menu-mobile.scss
+++ b/sass/components/_menu-mobile.scss
@@ -5,9 +5,10 @@
     list-style: none;
   }
   
-  @media (max-width: 767px) {
+  @media (min-width: 767px) {
     .menu {
       display: none;
+      
     }
   }
   
