--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -30,7 +30,7 @@
                       
                      
                       @media screen and (max-width: 1199px) { padding-bottom: 60px;  }
-                      @media screen and (max-width: 767px){ }
+                      @media screen and (max-width: 767px){     justify-content: center;}
                       @media screen and (max-width: 767px) {flex-basis: calc((100% - 1 * 30px) / 2);}
                       @media screen and (min-width: 768px) {flex-basis: calc((100% - 2 * 30px) / 3); justify-content: center;}
                       @media screen and (min-width: 1200px) {flex-wrap:nowrap; padding-bottom: 34px;  flex-basis: calc((100% - 150px) / 6);}
