--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -22,7 +22,7 @@
    
       &__input{
            height: 50px;
-           width: 358px;
+           
            border: 1px solid rgba(255, 255, 255, 0.3);
            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
            border-radius: 4px;
@@ -35,12 +35,24 @@
            @media screen and(max-width:1199px) {margin-bottom: 20px;}
            @media screen and(min-width:1200px) {margin-right: 10px;}
            
+          @media screen and (min-width: 370px) {
+            width: 358px;
+          }
+           
         
        }
    }
-   .footer-subscibe__form{
-@media screen and (max-width:1199px) {
-   width: 450px;
-}
+//    .footer-subscibe__form{}
 
-   }
+    
+// @media screen and (min-width:480px) {
+//     width: 450px;
+ 
+// }
+// @media screen and (min-width:768px) {
+//     width: 450px;
+ 
+// }
+
+
+   
