--- a/sass/components/_menu-mobile.scss
+++ b/sass/components/_menu-mobile.scss
@@ -126,7 +126,8 @@
     display: flex;
     gap: 10px;
     text-decoration: none;
-   
+    flex-wrap: wrap;
+    align-items: flex-end;
   
     
     
