--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -84,18 +84,18 @@ padding-bottom: 30px;}
         &__images{display: block;
         @media screen and (max-width:767px) {
             width: 450px;
-            height: 460px;  
+            // height: 460px;  
         }
 
         @media screen and (min-width:768px) {
 
             width: 354px;
-            height: 374px;
+            // height: 374px;
         }
         
         @media screen and (min-width:1200px) {
             width: 270px;
-            height: 260px;
+            // height: 260px;
     
 }
 
