--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -5,6 +5,7 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
+            max-width: 480px;
         }
         @media screen and(min-width:1200px) {
             margin-left: 110px; 
@@ -38,8 +39,13 @@
           @media screen and (min-width: 370px) {
             width: 358px;
           }
-           
-        
+          @media screen and (min-width:480px) {
+            width: 450px;
+          }
+
+        @media screen and (min-width: 1200px) {
+            width: 358px;
+          }
        }
    }
 //    .footer-subscibe__form{}
