--- a/css/main.css
+++ b/css/main.css
@@ -638,7 +638,7 @@ body {
   padding: 40px;
   background-color: var(--second-text-colour);
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
   .modal {
     width: 450px;
     height: 609px;
@@ -721,16 +721,7 @@ body {
   line-height: 1.16;
   letter-spacing: 0.01em;
   resize: none;
-}
-@media screen and (max-width: 1199px) {
-  .modal__textarea {
-    width: 370px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .modal__textarea {
-    width: 448px;
-  }
+  width: 100%;
 }
 .modal__textarea:focus {
   border: 1px solid rgb(33, 150, 243);
