--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,11 +9,13 @@
     border-radius: 4px;
     padding: 40px;
     background-color: var(--second-text-colour); 
-    @media screen and (max-width:1199px) {
+
+@media screen and (min-width:480px) {
     width: 450px;
     height: 609px;
+}
 
-    }
+  
     @media screen and (min-width:1200px) {
     width: 528px;
     height: 581px; 
@@ -102,8 +104,8 @@
         line-height: 1.16;
         letter-spacing: 0.01em; 
         resize:none; 
-        @media screen and (max-width:1199px) {width:  370px;}
-        @media screen and (min-width:1200px) {width:  448px;}
+        width: 100%;
+        
         
 
         &:focus{
