--- a/css/main.css
+++ b/css/main.css
@@ -638,6 +638,24 @@ body {
   padding: 40px;
   background-color: var(--second-text-colour);
 }
+@media screen and (min-width: 320px) {
+  .modal {
+    width: 300px;
+    height: 609px;
+  }
+}
+@media screen and (min-width: 360px) {
+  .modal {
+    width: 330px;
+    height: 609px;
+  }
+}
+@media screen and (min-width: 430px) {
+  .modal {
+    width: 400px;
+    height: 609px;
+  }
+}
 @media screen and (min-width: 480px) {
   .modal {
     width: 450px;
