--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,6 +10,23 @@
     padding: 40px;
     background-color: var(--second-text-colour); 
 
+    @media screen and (min-width:320px) {
+        width: 300px;
+        height: 609px;
+
+    }
+
+    @media screen and (min-width:360px) {
+        width: 330px;
+        height: 609px;
+
+    }
+    @media screen and (min-width:430px) {
+        width: 400px;
+        height: 609px;
+
+    }
+
 @media screen and (min-width:480px) {
     width: 450px;
     height: 609px;
